Fix textarea size on Firefox

--- a/example/css/style.less
+++ b/example/css/style.less
@@ -117,18 +117,45 @@ table {
 				left:-30px;
 			}
 		}
-		textarea {
-			width:100%;
-			height:100%;
-			resize:none;
-			padding:12px 15px;
-			border:0;
-			font-family:'Courier New', Courier, monospace;
-			font-size:13px;
-			color: @dgrey;
-			background-color: @lgrey;
-			position: relative;
+	}
+}
+
+#textareas {
+	position: absolute;
+	top: 62px;
+	right: 30px;
+	bottom: 39px;
+	left: 30px;
+	.col {
+		height: 100%;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		&:first-child {
+			left: 0;
+			right: 50%;
+			margin-right: 15px;
 		}
+		&:last-child {
+			left: 50%;
+			right: 0;
+			margin-left: 15px;
+		}
+	}
+	textarea {
+		width: 100%;
+		height: 100%;
+		box-sizing: border-box;
+		resize: none;
+		padding: 12px 15px;
+		border: 0;
+		font-family: 'Courier New', Courier, monospace;
+		font-size: 13px;
+		color: @dgrey;
+		background-color: @lgrey;
+		position: absolute;
+		top: 0;
+		left: 0;
 	}
 }
 
